# kscd

./: CDDBSetup.cpp  CDDBSetup.dlg  CDDBSetup.h  CDDBSetupData.cpp  CDDBSetupData.h  CDDialog.cpp  CDDialog.h  CDDialogData.cpp  CDDialogData.h  CMakeLists.txt  ChangeLog  HWcontroler.cpp  HWcontroler.h  Makefile.am  Messages.sh  TODO  audiocd.cpp  audiocd.h  audiocd_play.desktop  bwlednum.cpp  bwlednum.h  cdcombobox.cpp  cdcombobox.h  cddaslave.c  cddb.cpp  cddb.h  cddbdlg.cpp  cddbdlg.h  cddbdlgbase.ui  cddbdlgbase.ui.h  cddbmanager.cpp  cddbmanager.h  cdinfo.c  cdreader.cpp  cdreader.h  cdrom.c  config-kscd.h.cmake  config.h  config.h.std  configWidget.cpp  (+59 more)
bitmaps/: AUTHORS  CMakeLists.txt  eject.xbm  ff.xbm  lock.xbm  logo.xbm  magic.xbm  nexttrk.xbm  options.xbm  playpaus.xbm  poweroff.xbm  prevtrk.xbm  repeat.xbm  rew.xbm  shuffle.xbm  stop.xbm
bwlednum/: bwlednum.cpp  bwlednum.h  example.cpp
cmake/: FindDiscId.cmake  FindMusicBrainz3.cmake  FindMusicBrainz5.cmake
dbus/: PlayerDBusHandler.cpp  PlayerDBusHandler.h  RootDBusHandler.cpp  RootDBusHandler.h  TracklistDBusHandler.cpp  TracklistDBusHandler.h  org.freedesktop.MediaPlayer.player.xml  org.freedesktop.MediaPlayer.tracklist.xml
doc/: Makefile.am  index-1.html  index-2.html  index-3.html  index-4.html  index-5.html  index-6.html  index-7.html  index-8.html  index.cvlog  index.docbook  index.html  index.nif  index.sgml  kscd-1.html  kscd-2.html  kscd-3.html  kscd-4.html  kscd-5.html  kscd-6.html  kscd-7.html  kscd-8.html  kscd.html
gui/: background.cpp  background.h  closebutton.cpp  closebutton.h  ejectbutton.cpp  ejectbutton.h  finderSkin.cpp  finderSkin.h  ihmnamespace.h  kscdwidget.cpp  kscdwidget.h  kscdwindow.cpp  kscdwindow.h  loopbutton.cpp  loopbutton.h  minimizebutton.cpp  minimizebutton.h  mutebutton.cpp  mutebutton.h  nextbutton.cpp  nextbutton.h  panel.cpp  panel.h  playbutton.cpp  playbutton.h  previousbutton.cpp  previousbutton.h  randombutton.cpp  randombutton.h  seekbar.cpp  seekbar.h  seekcursor.cpp  seekcursor.h  seekslider.cpp  seekslider.h  stopbutton.cpp  stopbutton.h  titlePopUp.cpp  titlePopUp.h  trackListDlgUI.ui  (+6 more)
gui/skin/: README.skin
ihm/: .cproject  .project  background.cpp  background.h  closebutton.cpp  closebutton.h  configwindow.cpp  configwindow.h  ejectbutton.cpp  ejectbutton.h  finderSkin.cpp  finderSkin.h  finderSkinUI.ui  ihmnamespace.h  kscdwidget.cpp  kscdwidget.h  kscdwindow.cpp  kscdwindow.h  loopbutton.cpp  loopbutton.h  minimizebutton.cpp  minimizebutton.h  mutebutton.cpp  mutebutton.h  nextbutton.cpp  nextbutton.h  panel.cpp  panel.h  playbutton.cpp  playbutton.h  previousbutton.cpp  previousbutton.h  randombutton.cpp  randombutton.h  seekbar.cpp  seekbar.h  seekcursor.cpp  seekcursor.h  seekslider.cpp  seekslider.h  (+10 more)
ihm/skin/: README.skin
kscdmagic/: CMakeLists.txt  Makefile.am  README  core.cpp  logo.h  main.cpp  polygon.h  sound.cpp  symbol.h  syna.h  version.h  xlib.c  xlib.h  xlibwrap.cpp
libwm/: Makefile.am  cddaslave.c  cddb.c  cdinfo.c  cdrom.c  cdtext.c  configure.in.in  database.c  plat_freebsd.c  plat_linux.c  plat_linux_cdda.c  plat_sun_cdda.c  scsi.c
libwm/include/: wm_cddb.h  wm_config.h  wm_database.h  wm_struct.h
pics/: CMakeLists.txt
tests/: CMakeLists.txt  audiocd_test.cpp  audiocd_test.h  hwcontroler_test.cpp  hwcontroler_test.h  test.cpp
